force-app/main/default/objects/JBCXM__ScoringScheme__c/JBCXM__ScoringScheme__c.object-meta.xml
<CustomObject>
    <label>Scorecard Scoring Scheme</label>
    <nameField>
        <label>Scoring Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorecard Scoring Scheme</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>