force-app/main/default/objects/JBCXM__ScoringScheme__c/fields/JBCXM__CustomerScheme__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CustomerScheme__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This used to specify whether you use the scheme for the customer overall health calculation or not</description>
    <label>Customer Scheme</label>
    <type>Checkbox</type>
</CustomField>