force-app/main/default/objects/JBCXM__ScoringScheme__c/fields/JBCXM__From__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__From__c</fullName>
    <label>From</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>