force-app/main/default/objects/JBCXM__ScoringScheme__c/fields/JBCXM__IsActive__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is used to specify whether the scoring scheme is active or inactive</description>
    <label>Is enabled</label>
    <type>Checkbox</type>
</CustomField>