force-app/main/default/objects/JBCXM__ScoringScheme__c/fields/JBCXM__SystemDefined__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SystemDefined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to specify whether the Scoring scheme is created by user or default with application.</description>
    <label>System Defined</label>
    <type>Checkbox</type>
</CustomField>