force-app/main/default/objects/JBCXM__ScoringScheme__c/fields/JBCXM__Type__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Type__c</fullName>
    <description>This is used to represent the scheme type. For Example Grade, Score, Color, ....</description>
    <label>Scheme Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>